<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:locale="fr">

    <string name="app_name" translatable="false">Hugo</string>

    <string name="submit">valider</string>
    <string name="cancel">annuler</string>
    <string name="unit_ml">mL</string>
    <string name="unit_minutes">minutes</string>
    <string name="unit_g">grammes</string>

    <string name="baby">Bébé</string>
    <string name="baby_name">Prénom</string>
    <string name="menu_select_baby">Sélectionner un autre bébé</string>

    <string name="breast_left">Sein gauche</string>
    <string name="breast_right">Sein droit</string>
    <string name="maternal_milk">(lait maternel)</string>
    <string name="artificial_milk">(lait artificiel)</string>

    <string name="care_type_change">Couche</string>
    <string name="care_type_food">Nourriture</string>
    <string name="care_type_health_hygiene">Santé &amp; hygiène</string>

    <string name="section_total_milk">%d mL</string>

    <string name="care_umbilical_cord">Soin du cordon</string>
    <string name="care_face">Soin du visage</string>
    <string name="care_bath">Bain</string>
    <string name="care_vitamins">Vitamines</string>
    <string name="care_hygiene_invalid_selection">Au moins un type de soin doit être sélectionné</string>

    <string name="care_change_pee">Pipi</string>
    <string name="care_change_poo">Caca</string>
    <string name="care_change_nothing">Pas de pipi ni de caca</string>

    <string name="care_food_settings_dialog_title">Types d\'alimentation proposés</string>
    <string name="care_food_settings_invalid_selection">Au moins un type d\'aliment doit être sélectionné</string>
    <string name="care_food_invalid_selection">Au moins un type d\'aliment doit être sélectionné</string>
    <string name="care_food_invalid_input">Saisie invalide</string>

    <string name="care_food_breast_feeding">Allaitement</string>
    <string name="care_food_bottle_feeding">Biberon</string>
    <string name="care_food_maternal_bottle_feeding">Lait maternel</string>
    <string name="care_food_artificial_bottle_feeding">Lait artificiel</string>
    <string name="care_food_extraction">Tire-lait</string>
    <string name="care_food_diversification">Diversification</string>
    <string name="care_breast_feeding_left">Sein gauche, %1$d minutes</string>
    <string name="care_breast_feeding_right" tools:ignore="StringFormatCount">Sein droit, %2$d minutes</string>
    <string name="care_breast_feeding_both">Sein gauche, %1$d minutes\nSein droit, %2$d minutes</string>
    <string name="care_breast_extraction">Tire-lait %d mL</string>
    <string name="care_bottle_feeding_maternal">%1$d mL de lait maternel</string>
    <string name="care_bottle_feeding_artificial">%1$d mL de lait artificiel</string>
    <string name="care_bottle_feeding_other">%1$d mL de %2$s</string>

    <string name="care_diversification_feeding">%1$d grammes de %2$s</string>
    <string name="care_diversification_feeding_aliment">Aliment</string>
    <string name="care_diversification_feeding_quantity">Quantité</string>

    <string name="date_time_format">%1$s à %2$s</string>
    <string name="care_hygiene_bath">Bain</string>
    <string name="care_hygiene_face">Soin du visage</string>
    <string name="care_hygiene_umbilical_cord">Soin du cordon</string>
    <string name="care_health_vitamins">Vitamines</string>

    <string name="confirm_no_change_message">Vous n\'avez sélectionner aucune option, confirmez-vous votre choix?</string>
    <string name="desc_remove_bottle_feeding">Supprimer le biberon</string>
    <string name="desc_remove_breast_feeding">Supprimer l\'allaitement</string>
    <string name="desc_remove_breast_extraction">Supprimer le tire-lait</string>

    <string name="menu_licenses">Licenses</string>
    <string name="menu_disconnect">Déconnexion</string>
    <string name="desc_settings">Paramètres</string>
    <string name="desc_delete">Supprimer</string>

</resources>
