<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="android.support.constraint.ConstraintLayout">

    <ImageView
        android:id="@+id/imgRemove"
        android:layout_width="?android:listPreferredItemHeightSmall"
        android:layout_height="?android:listPreferredItemHeightSmall"
        android:contentDescription="@string/desc_remove_breast_extraction"
        android:scaleType="centerInside"
        android:src="@drawable/ic_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/_txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edtExtraction"
        android:text="@string/care_food_extraction"
        app:layout_constraintBottom_toBottomOf="@id/imgRemove"
        app:layout_constraintStart_toEndOf="@id/imgRemove"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edtExtraction"
        android:layout_width="@dimen/care_edit_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_medium"
        android:inputType="number"
        android:nextFocusForward="@id/chkLeftBreast"
        android:nextFocusDown="@id/chkLeftBreast"
        app:layout_constraintBaseline_toBaselineOf="@id/_txtTitle"
        app:layout_constraintStart_toEndOf="@id/_txtTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_micro"
        android:text="@string/unit_ml"
        android:textAppearance="@style/Text.Light"
        app:layout_constraintBaseline_toBaselineOf="@id/edtExtraction"
        app:layout_constraintStart_toEndOf="@id/edtExtraction"/>

    <CheckBox
        android:id="@+id/chkLeftBreast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/_txtLeftBreast"
        app:layout_constraintStart_toStartOf="@id/_txtTitle"/>

    <TextView
        android:id="@+id/_txtLeftBreast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        android:layout_marginTop="@dimen/space_small"
        android:labelFor="@id/chkLeftBreast"
        android:text="@string/breast_left"
        app:layout_constraintStart_toEndOf="@id/chkLeftBreast"
        app:layout_constraintTop_toBottomOf="@id/edtExtraction"/>

    <CheckBox
        android:id="@+id/chkRightBreast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/_txtRightBreast"
        app:layout_constraintStart_toEndOf="@id/_txtLeftBreast"/>

    <TextView
        android:id="@+id/_txtRightBreast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        android:layout_marginTop="@dimen/space_small"
        android:labelFor="@id/chkRightBreast"
        android:text="@string/breast_right"
        app:layout_constraintStart_toEndOf="@id/chkRightBreast"
        app:layout_constraintTop_toBottomOf="@id/edtExtraction"/>

</merge>