<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_height="match_parent">

    <TextView
        android:id="@+id/_txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawablePadding="@dimen/space_micro"
        android:drawableStart="@drawable/ic_food"
        android:paddingBottom="@dimen/space_small"
        android:paddingEnd="@dimen/vertical_margin"
        android:paddingStart="@dimen/vertical_margin"
        android:paddingTop="@dimen/space_small"
        android:text="@string/care_type_food"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"/>

    <TextView
        android:id="@+id/txtDateOrTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/space_medium"
        android:drawableEnd="@drawable/ic_edit"
        android:drawablePadding="@dimen/space_small"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_txtTitle"
        tools:text="4 janvier 2018 à 10h20"/>

    <HorizontalScrollView
        android:id="@+id/_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/space_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDateOrTime">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="@drawable/space"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/addArtificialBottleFeeding"
                style="@style/FoodCare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/care_food_artificial_bottle_feeding"/>

            <TextView
                android:id="@+id/addMaternalBottleFeeding"
                style="@style/FoodCare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/care_food_maternal_bottle_feeding"/>

            <TextView
                android:id="@+id/addBreastFeeding"
                style="@style/FoodCare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/care_food_breast_feeding"/>

            <TextView
                android:id="@+id/addBreastExtraction"
                style="@style/FoodCare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/care_food_extraction"/>

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/foodContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_medium"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/space_medium"
        android:divider="@drawable/space"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_choice"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:background="#0F0"
        tools:minHeight="64dp"/>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_marginBottom="@dimen/space_medium"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/vertical_margin"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodContainer"/>

</android.support.constraint.ConstraintLayout>