<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/_txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawablePadding="@dimen/space_micro"
        android:drawableStart="@drawable/ic_change"
        android:paddingBottom="@dimen/space_small"
        android:paddingEnd="@dimen/vertical_margin"
        android:paddingStart="@dimen/vertical_margin"
        android:paddingTop="@dimen/space_small"
        android:text="@string/care_type_change"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"/>

    <TextView
        android:id="@+id/txtDateOrTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/space_medium"
        android:drawableEnd="@drawable/ic_edit"
        android:drawablePadding="@dimen/space_small"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_txtTitle"
        tools:text="4 janvier 2018 à 10h20"/>

    <TextView
        android:id="@+id/_txtPee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/space_medium"
        android:labelFor="@id/chkPee"
        android:text="@string/care_change_pee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDateOrTime"/>

    <TextView
        android:id="@+id/_txtPoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:labelFor="@id/chkPoo"
        android:text="@string/care_change_poo"
        app:layout_constraintLeft_toLeftOf="@id/_txtPee"
        app:layout_constraintTop_toBottomOf="@id/_txtPee"/>

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="_txtPee,_txtPoo"/>

    <Switch
        android:id="@+id/chkPee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        app:layout_constraintBaseline_toBaselineOf="@id/_txtPoo"
        app:layout_constraintStart_toEndOf="@id/barrier"/>

    <Switch
        android:id="@+id/chkPoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        app:layout_constraintBaseline_toBaselineOf="@id/_txtPee"
        app:layout_constraintStart_toEndOf="@id/barrier"/>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_medium"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/space_medium"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_txtPoo"/>

</android.support.constraint.ConstraintLayout>