<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/vertical_margin"
        android:paddingEnd="@dimen/space_small"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:lines="1"
            android:drawablePadding="@dimen/space_micro"
            tools:drawableStart="@drawable/ic_change"
            tools:text="Title"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:padding="@dimen/space_small"
            android:contentDescription="@string/desc_delete"
            android:visibility="invisible"
            tools:visibility="visible"/>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/space_medium"
        tools:background="#94000000"
        tools:minHeight="200dp"/>

    <Button
        android:id="@+id/btnCancel"
        style="@style/Button.Link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/vertical_margin"
        android:text="@string/cancel"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_medium"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/vertical_margin"
        android:text="@string/submit"/>

</LinearLayout>