<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtDateOrTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:drawableEnd="@drawable/ic_edit"
        android:drawablePadding="@dimen/space_small"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="4 janvier 2018 à 10h20"/>

    <TextView
        android:id="@+id/_txtFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:labelFor="@id/chkFace"
        android:text="@string/care_hygiene_face"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDateOrTime"/>

    <TextView
        android:id="@+id/_txtBath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:labelFor="@id/chkBath"
        android:text="@string/care_hygiene_bath"
        app:layout_constraintLeft_toLeftOf="@id/_txtFace"
        app:layout_constraintTop_toBottomOf="@id/_txtFace"/>

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="_txtFace,_txtBath"/>

    <Switch
        android:id="@+id/chkBath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        app:layout_constraintBaseline_toBaselineOf="@id/_txtBath"
        app:layout_constraintStart_toEndOf="@id/barrier"/>

    <Switch
        android:id="@+id/chkFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        app:layout_constraintBaseline_toBaselineOf="@id/_txtFace"
        app:layout_constraintStart_toEndOf="@id/barrier"/>

    <TextView
        android:id="@+id/_txtUmbilicalCord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_large"
        android:layout_marginTop="@dimen/space_medium"
        android:labelFor="@id/chkUmbilicalCord"
        android:text="@string/care_hygiene_umbilical_cord"
        app:layout_constraintBaseline_toBaselineOf="@id/_txtFace"
        app:layout_constraintStart_toEndOf="@id/chkFace"/>

    <TextView
        android:id="@+id/_txtVitamins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/chkVitamins"
        android:text="@string/care_health_vitamins"
        app:layout_constraintBaseline_toBaselineOf="@id/_txtBath"
        app:layout_constraintStart_toStartOf="@id/_txtUmbilicalCord"/>

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="_txtUmbilicalCord,_txtVitamins"/>

    <Switch
        android:id="@+id/chkUmbilicalCord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        app:layout_constraintBaseline_toBaselineOf="@id/_txtUmbilicalCord"
        app:layout_constraintStart_toEndOf="@id/barrier2"/>

    <Switch
        android:id="@+id/chkVitamins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        app:layout_constraintBaseline_toBaselineOf="@id/_txtVitamins"
        app:layout_constraintStart_toEndOf="@id/barrier2"/>

</android.support.constraint.ConstraintLayout>