<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/ic_timeline"
        tools:ignore="ContentDescription"
        style="@style/BackgroundImage"/>

    <!-- TODO Add fastScrollEnabled -->
    <!-- TODO Implement a section indexer -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcvTimeline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/vertical_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_timeline"/>

    <!-- TODO Add HideOnScroll behavior -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/space_large"
        app:layout_anchor="@id/rcvTimeline"
        app:layout_anchorGravity="bottom|end">

        <LinearLayout
            android:id="@+id/fabAddMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/fabAdd"
            app:layout_constraintBottom_toTopOf="@id/fabAdd"
            android:layout_marginEnd="@dimen/space_small"
            android:layout_marginBottom="@dimen/space_small">

            <TextView
                android:id="@+id/txtFabAddFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/care_type_food"
                android:drawableEnd="@drawable/ic_food"
                style="@style/FoodLabel"/>

            <TextView
                android:id="@+id/txtFabAddChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/care_type_change"
                android:drawableEnd="@drawable/ic_change"
                style="@style/FoodLabel"/>

            <TextView
                android:id="@+id/txtFabAddHealthHygiene"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/care_type_health_hygiene"
                android:drawableEnd="@drawable/ic_health_hygiene"
                style="@style/FoodLabel"/>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>